add network interface selector

--- a/menustat/Base.lproj/MainMenu.xib
+++ b/menustat/Base.lproj/MainMenu.xib
@@ -14,6 +14,7 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="menustat" customModuleProvider="target">
             <connections>
+                <outlet property="networkInterfaceSelector" destination="i8T-ey-jck" id="NbE-Lm-zh6"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
@@ -55,16 +56,16 @@
         </menu>
         <window title="menustat" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
-            <rect key="contentRect" x="335" y="390" width="480" height="61"/>
+            <rect key="contentRect" x="335" y="390" width="274" height="92"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1366" height="745"/>
             <value key="minSize" type="size" width="480" height="360"/>
             <value key="maxSize" type="size" width="480" height="360"/>
             <view key="contentView" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="61"/>
+                <rect key="frame" x="0.0" y="0.0" width="274" height="92"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="DJJ-kc-uyS">
-                        <rect key="frame" x="155" y="13" width="170" height="32"/>
+                        <rect key="frame" x="52" y="13" width="170" height="32"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="158" id="azA-1T-Z5X"/>
                         </constraints>
@@ -77,6 +78,27 @@
                             <action selector="doQuit:" target="Voe-Tx-rLC" id="aZX-Gm-LCe"/>
                         </connections>
                     </button>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ivc-kC-T4X">
+                        <rect key="frame" x="18" y="55" width="117" height="17"/>
+                        <animations/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Network interface:" id="bAf-Qu-Ur7">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i8T-ey-jck">
+                        <rect key="frame" x="160" y="50" width="97" height="26"/>
+                        <animations/>
+                        <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="U3J-s1-z2n">
+                            <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="menu"/>
+                            <menu key="menu" id="SBs-n6-O6K"/>
+                        </popUpButtonCell>
+                        <connections>
+                            <action selector="doSelectNetworkInterface:" target="Voe-Tx-rLC" id="GUg-LA-TVE"/>
+                        </connections>
+                    </popUpButton>
                 </subviews>
                 <constraints>
                     <constraint firstItem="DJJ-kc-uyS" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="AF3-fV-cms"/>
@@ -84,7 +106,7 @@
                 </constraints>
                 <animations/>
             </view>
-            <point key="canvasLocation" x="266" y="-223.5"/>
+            <point key="canvasLocation" x="172" y="-190"/>
         </window>
     </objects>
 </document>
